deployment/dok8s/dev/app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/app: authproxy
    app.kubernetes.io/component: authproxy
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: authproxy
spec:
  ports:
  - port: 8080
  selector:
    app.kubernetes.io/app: authproxy
    app.kubernetes.io/component: authproxy
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/app: helloworld
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: hello-kubernetes-first
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/app: helloworld
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/app: horizon
    app.kubernetes.io/component: horizon
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: horizon
spec:
  ports:
  - port: 4000
  selector:
    app.kubernetes.io/app: horizon
    app.kubernetes.io/component: horizon
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/app: marketdb
    app.kubernetes.io/component: marketdb
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: marketdb
spec:
  ports:
  - port: 5432
  selector:
    app.kubernetes.io/app: marketdb
    app.kubernetes.io/component: marketdb
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/app: relayactions
    app.kubernetes.io/component: relayactions
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: relayactions
spec:
  ports:
  - port: 4004
  selector:
    app.kubernetes.io/app: relayactions
    app.kubernetes.io/component: relayactions
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/app: synchronizer
    app.kubernetes.io/component: synchronizer
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: synchronizer
spec:
  ports:
  - port: 4004
  selector:
    app.kubernetes.io/app: synchronizer
    app.kubernetes.io/component: synchronizer
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/app: trader
    app.kubernetes.io/component: trader
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: trader
spec:
  ports:
  - port: 4000
  selector:
    app.kubernetes.io/app: trader
    app.kubernetes.io/component: trader
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/app: universeapi
    app.kubernetes.io/component: universeapi
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: universeapi
spec:
  ports:
  - name: http
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app.kubernetes.io/app: universeapi
    app.kubernetes.io/component: universeapi
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/app: universedb
    app.kubernetes.io/component: universedb
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: universedb
spec:
  ports:
  - port: 5432
  selector:
    app.kubernetes.io/app: universedb
    app.kubernetes.io/component: universedb
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/app: authproxy
    app.kubernetes.io/component: authproxy
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: authproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: authproxy
      app.kubernetes.io/component: authproxy
      app.kubernetes.io/part-of: cryptosoccer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/app: authproxy
        app.kubernetes.io/component: authproxy
        app.kubernetes.io/part-of: cryptosoccer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -backdoor=true
        - -timeout=30
        - -gqlurl
        - http://horizon:4000
        image: freeverseio/authproxy:dev
        imagePullPolicy: Always
        name: authproxy
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/app: helloworld
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: hello-kubernetes-first
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/app: helloworld
      app.kubernetes.io/part-of: cryptosoccer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/app: helloworld
        app.kubernetes.io/part-of: cryptosoccer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - env:
        - name: MESSAGE
          value: Hello from the first deployment!
        image: paulbouwer/hello-kubernetes:1.5
        name: hello-kubernetes
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/app: horizon
    app.kubernetes.io/component: horizon
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: horizon
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: horizon
      app.kubernetes.io/component: horizon
      app.kubernetes.io/part-of: cryptosoccer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/app: horizon
        app.kubernetes.io/component: horizon
        app.kubernetes.io/part-of: cryptosoccer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -u
        - http://universeapi:4000/graphql
        - -m
        - http://trader:4000/graphql
        image: freeverseio/horizon:dev
        imagePullPolicy: Always
        name: horizon
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/app: marketdb
    app.kubernetes.io/component: marketdb
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: marketdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: marketdb
      app.kubernetes.io/component: marketdb
      app.kubernetes.io/part-of: cryptosoccer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/app: marketdb
        app.kubernetes.io/component: marketdb
        app.kubernetes.io/part-of: cryptosoccer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - image: freeverseio/market.db:dev
        imagePullPolicy: Always
        name: marketdb
        ports:
        - containerPort: 5432
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/app: notary
    app.kubernetes.io/component: notary
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: notary
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: notary
      app.kubernetes.io/component: notary
      app.kubernetes.io/part-of: cryptosoccer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/app: notary
        app.kubernetes.io/component: notary
        app.kubernetes.io/part-of: cryptosoccer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -postgres
        - postgres://$(freeverse_username):$(freeverse_password)@marketdb:5432/market?sslmode=disable
        - -ethereum
        - http://xdai:8545
        - -private_key
        - 3B878F7892FBBFA30C8AED1DF317C19B853685E707C2CF0EE1927DC516060A54
        - -market_address
        - $(MARKET_CONTRACT_ADDRESS)
        - -constantsgetters_address
        - $(CONSTANTSGETTERS_CONTRACT_ADDRESS)
        image: freeverseio/market.notary:dev
        imagePullPolicy: Always
        name: notary
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/app: relayactions
    app.kubernetes.io/component: relayactions
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: relayactions
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: relayactions
      app.kubernetes.io/component: relayactions
      app.kubernetes.io/part-of: cryptosoccer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/app: relayactions
        app.kubernetes.io/component: relayactions
        app.kubernetes.io/part-of: cryptosoccer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -postgres
        - postgres://$(freeverse_username):$(freeverse_password)@universedb:5432/cryptosoccer?sslmode=disable
        - -ethereum
        - http://xdai:8545
        - -updatesContractAddress
        - $(UPDATES_CONTRACT_ADDRESS)
        - -ipfs
        - ipfsnode:5001
        image: freeverseio/relay.actions:dev
        imagePullPolicy: Always
        name: relayactions
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/app: synchronizer
    app.kubernetes.io/component: synchronizer
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: synchronizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: synchronizer
      app.kubernetes.io/component: synchronizer
      app.kubernetes.io/part-of: cryptosoccer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/app: synchronizer
        app.kubernetes.io/component: synchronizer
        app.kubernetes.io/part-of: cryptosoccer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -postgres
        - postgres://$(freeverse_username):$(freeverse_password)@universedb:5432/cryptosoccer?sslmode=disable
        - -ethereum
        - http://xdai:8545
        - -ipfs
        - ipfsnode:5001
        - -leaguesContractAddress
        - $(LEAGUES_CONTRACT_ADDRESS)
        - -engineContractAddress
        - $(ENGINE_CONTRACT_ADDRESS)
        - -enginePreCompContractAddress
        - $(ENGINEPRECOMP_CONTRACT_ADDRESS)
        - -marketContractAddress
        - $(MARKET_CONTRACT_ADDRESS)
        - -updatesContractAddress
        - $(UPDATES_CONTRACT_ADDRESS)
        - -assetsContractAddress
        - $(ASSETS_CONTRACT_ADDRESS)
        - -evolutionContractAddress
        - $(EVOLUTION_CONTRACT_ADDRESS)
        - -playandevolveContractAddress
        - $(PLAYANDEVOLVE_CONTRACT_ADDRESS)
        - -trainingpointsContractAddress
        - $(TRAININGPOINTS_CONTRACT_ADDRESS)
        - -shopContractAddress
        - $(SHOP_CONTRACT_ADDRESS)
        - -utilsContractAddress
        - $(UTILS_CONTRACT_ADDRESS)
        - -constantsgettersContractAddress
        - $(CONSTANTSGETTERS_CONTRACT_ADDRESS)
        image: freeverseio/synchronizer:dev
        imagePullPolicy: Always
        name: synchronizer
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/app: trader
    app.kubernetes.io/component: trader
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: trader
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: trader
      app.kubernetes.io/component: trader
      app.kubernetes.io/part-of: cryptosoccer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/app: trader
        app.kubernetes.io/component: trader
        app.kubernetes.io/part-of: cryptosoccer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -d
        - postgres://$(freeverse_username):$(freeverse_password)@marketdb:5432/market
        - -p
        - "4000"
        image: freeverseio/market.trader:dev
        imagePullPolicy: Always
        name: trader
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/app: universeapi
    app.kubernetes.io/component: universeapi
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: universeapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: universeapi
      app.kubernetes.io/component: universeapi
      app.kubernetes.io/part-of: cryptosoccer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/app: universeapi
        app.kubernetes.io/component: universeapi
        app.kubernetes.io/part-of: cryptosoccer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -d
        - postgres://$(freeverse_username):$(freeverse_password)@universedb:5432/cryptosoccer
        - --assetsContractAddress
        - $(ASSETS_CONTRACT_ADDRESS)
        - --ethereum
        - http://xdai:8545
        - --sender
        - $(sender)
        image: freeverseio/universe.api:dev
        imagePullPolicy: Always
        name: universeapi
        ports:
        - containerPort: 4000
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/app: universedb
    app.kubernetes.io/component: universedb
    app.kubernetes.io/part-of: cryptosoccer
    app.kubernetes.io/version: 1.0.0
  name: universedb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: universedb
      app.kubernetes.io/component: universedb
      app.kubernetes.io/part-of: cryptosoccer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/app: universedb
        app.kubernetes.io/component: universedb
        app.kubernetes.io/part-of: cryptosoccer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - image: freeverseio/universe.db:dev
        imagePullPolicy: Always
        name: universedb
        ports:
        - containerPort: 5432
      imagePullSecrets:
      - name: docker-secret
